--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ body{
     font-family: var(--font-padrao);
 }
 
+a.externo::after{
+    content: '\00a0\1F517';
+}
+
 header{
     background-color: var(--cor4);
     min-height: 150px;
@@ -41,6 +45,7 @@ header > h1{
     color: white;
     font-family: var(--font-destaque);
     font-size: 3em;
+    font-weight: normal;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
 }
 
@@ -63,7 +68,7 @@ nav{
 }
 
 nav > a{
-    color: white;
+    color: var(--cor1);
     padding: 10px;
     text-decoration: none;
     font-weight: 400;
@@ -131,17 +136,74 @@ main .img-pequena{
 main h1{
     color: var(--cor4);
     font-family: var(--font-android);
+    font-weight: normal;
+    font-size: 1.8em;
 }
 
 main h2{
     color: var(--cor5);
     font-family: var(--font-android);
     font-size: 1.3em;
+    font-weight: normal;
     background-image: linear-gradient(to right, var(--cor1),transparent);
     text-indent: 20px;
+}
+
+div.video{
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 59%;
+    position: relative;
+
+}
+
+div.video > iframe{
+    position: absolute;
+    top: 5%;
+    left: 9.7%;
+    width: 81%;
+    height: 78%;
+    border-radius: 10px;
+}
+
+aside{
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.281);
+}
+
+aside > ul{
+    /*para adicionar simbolos do empji pedia*/
+    list-style-type: '\2705\00A0';
+    list-style-position: inside;
+    columns: 2;
+}
+
+aside > h3{
+    background-color: var(--cor4);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0 -10px;
+    border-radius: 10px 10px 0 0;
+    
+
 }
 
 footer{
     background-color: var(--cor5);
     color: white;
+    text-align: center;
+    padding: 5px 0;
+}
+
+footer a{
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover{
+    color: var(--cor1);
 }
