--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,10 @@ header > h1{
 
 header > p{
     color: white;
-    margin-top: 30px;
     font-family: var(--font-padrao);
     max-width: 600px;
-    margin: 20px auto;
-    padding: 0 10px;
+    margin: auto;
+    padding: 20px 10px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
 
 }
